--- a/catalog/cat_app/templates/login.html
+++ b/catalog/cat_app/templates/login.html
@@ -7,6 +7,7 @@
 	<script src="https://apis.google.com/js/client:platform.js?onload=start" async defer></script>
 </head>
 <body>
+	{% include 'common/_flash-messages.html' %}
 	<div id="signin-button">
 		<span
 			class="g-signin"
