--- a/catalog/cat_app/templates/common/_flash-messages.html
+++ b/catalog/cat_app/templates/common/_flash-messages.html
@@ -1,3 +1,3 @@
 {% for m in get_flashed_messages(with_categories=True) %}
-	<div class="{{ m[0] }}">{{ m[1] }}</div>
+	<div class="{{ m[0] }}">{{ m[1]|safe }}</div>
 {% endfor %}
