--- a/catalog/cat_app/templates/product.html
+++ b/catalog/cat_app/templates/product.html
@@ -3,5 +3,5 @@
 {% block content %}
 	<h1>{{ product.name }}</h1>
 	<p>{{ product.description }}</p>
-	<a href="/catalog/{{ product.slug }}/edit">Edit</a> | <a href="/catalog/{{ product.name }}/delete">Delete</a>
+	<a href="/catalog/{{ product.slug }}/edit">Edit</a> | <a href="/catalog/{{ product.slug }}/delete">Delete</a>
 {% endblock %}
