fix: Resolve a few issues that prevented product edits
- Corrected the edit form action
- Correctly creates a new category if needed
- Removes db.session.add(product) from the edit view, which resulted in creating a new product, rather than modifying the existing product

--- a/catalog/cat_app/templates/edit-product.html
+++ b/catalog/cat_app/templates/edit-product.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	{% from "common/_form-helpers.html" import render_field %}
-	<form action="/catalog/create-product" method="post">
+	<form action="{{ request.path }}" method="post">
 		{{ render_field(form.name) }}
 		{{ render_field(form.description) }}
 		{{ render_field(form.category) }}
