--- a/catalog/cat_app/templates/home.html
+++ b/catalog/cat_app/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "common/layout.html" %}
 
 {% block content %}
+	<a href="/catalog/create-product">New product</a>
 	{% if categories %}
 		<h1>categories</h1>
 		<ul>
