--- a/catalog/cat_app/assets/sass/app.scss
+++ b/catalog/cat_app/assets/sass/app.scss
@@ -34,6 +34,7 @@
 
 @import "nav";
 @import "flashes";
+@import "grid-items";
 @import "breadcrumbs";
 @import "side-image";
 @import "type-system";
