--- a/catalog/cat_app/static/css/app.css
+++ b/catalog/cat_app/static/css/app.css
@@ -277,7 +277,8 @@ picture {
   .nav li {
     display: inline-block; }
     .nav li::after {
-      content: "|"; }
+      content: "|";
+      color: #ddd; }
     .nav li:last-child::after {
       content: ""; }
   .nav a {
@@ -345,6 +346,43 @@ picture {
     .flash-success a:focus,
     .flash-success a:hover {
       color: black; }
+
+.grid-items {
+  clear: both;
+  width: 100%;
+  position: relative; }
+  .grid-items::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .grid-items .grid-item {
+    background: #fff;
+    border-bottom: 1px solid rgba(51, 51, 51, 0.2);
+    cursor: pointer;
+    float: none;
+    overflow: hidden;
+    outline: none;
+    padding: 2em 1em;
+    text-decoration: none;
+    width: 320px;
+    margin: 0 auto;
+    height: auto;
+    display: block; }
+    @media screen and (min-width: 40em) {
+      .grid-items .grid-item {
+        border-right: 1px solid rgba(51, 51, 51, 0.2);
+        float: left;
+        padding: 2em;
+        width: 100%;
+        margin: 0;
+        height: 27em;
+        width: 33.33333%; } }
+    @media screen and (min-width: 53.75em) {
+      .grid-items .grid-item {
+        height: 31em; } }
+    .grid-items .grid-item:focus,
+    .grid-items .grid-item:hover {
+      background: rgba(51, 51, 51, 0.05); }
 
 .breadcrumbs {
   display: inline-block;
@@ -433,21 +471,16 @@ body {
     @media screen and (min-width: 40em) {
       body h2 {
         font-size: 1.2em; } }
-  body code {
-    background: #F7F7F7;
-    border-radius: 4.5px;
-    border: 1px solid #E0E0E0;
-    font-family: monaco;
-    font-size: 0.75em;
-    font-style: normal;
-    padding: 0.1em 0.4em;
-    white-space: nowrap; }
   body h3 {
     font-family: "Lusitana", serif;
     font-size: 1.4em;
     font-weight: 400;
     line-height: 1.3em;
     margin-bottom: .4em; }
+  body .subhead {
+    font-size: 1.1em;
+    font-weight: normal;
+    color: #333; }
   body .date {
     color: rgba(51, 51, 51, 0.4);
     font-family: "Merriweather", serif;
