--- a/catalog/cat_app/templates/frontend/home.html
+++ b/catalog/cat_app/templates/frontend/home.html
@@ -29,20 +29,21 @@
 
 {% block content %}
 	{% if products %}
-		<ul class="container">
+		<div class="grid-items">
 			{% for p in products %}
-			<li class="three-col">
-				<a href="/catalog/{{ p.category.slug }}/{{ p.slug }}">
-					<img src="http://placehold.it/260x300" alt="">
-					<h2>{{ p.name }}</h2>
-				</a>
+			<a href="/catalog/{{ p.category.slug }}/{{ p.slug }}" class="grid-item">
+				<img src="http://placehold.it/300x300" alt="">
+				<h2>{{ p.name }}</h2>
+				{% if p.subhead %}
+					<h3 class="subhead">{{ p.subhead }}</h3>
+				{% endif %}
 				<p class="author">
 					Author Name
 					<span class="date">2015</span>
 				</p>
-			</li>
+			</a>
 			{% endfor %}
-		</ul>
+		</div>
 	{% else %}
 		No products
 	{% endif %}
