tests: Update tests to handle new fields and images

--- a/catalog/cat_app/templates/frontend/product.html
+++ b/catalog/cat_app/templates/frontend/product.html
@@ -8,7 +8,7 @@
 	</div>
 	<div class="side-image">
 		<div class="images-wrapper">
-			<img src="http://placehold.it/363x432" alt="">
+			<img src="{{ product.image_url }}" alt="">
 		</div>
 		<div class="side-image-content">
 			<h1>{{ product.name }}</h1>
