--- a/catalog/cat_app/templates/common/_form-helpers.html
+++ b/catalog/cat_app/templates/common/_form-helpers.html
@@ -1,5 +1,5 @@
 {% macro render_field(field) %}
-    {{ field.label }}<br>
+    {{ field.label }}
     {% if field.errors %}
         <ul class=errors>
             {% for error in field.errors %}
@@ -7,5 +7,5 @@
             {% endfor %}
         </ul>
     {% endif %}
-    {{ field(**kwargs)|safe }}<br><br>
+    {{ field(**kwargs)|safe }}
 {% endmacro %}
