--- a/catalog/cat_app/templates/common/_header.html
+++ b/catalog/cat_app/templates/common/_header.html
@@ -1,9 +1,14 @@
 <div class="top-nav">
 	<div class="container">
 		<div class="left">
-			{% if session.username %}
-				<a href="/catalog/create-product">Add a book</a>
-			{% endif %}
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li>
+					{% if session.username %}
+						<a href="/catalog/create-product">Add a book</a>
+					{% endif %}
+				</li>
+			</ul>
 		</div>
 		<div class="right">
 		{% if session.username %}
